# RiichiEnv

./: Cargo.toml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: DEVELOPMENT_GUIDE.md  RULES.md
native/src/: action.rs  hand_evaluator.rs  lib.rs  observation.rs  parser.rs  rule.rs  types.rs
riichienv-core/: Cargo.toml
riichienv-core/benches/: agari_bench.rs
riichienv-core/src/: action.rs  errors.rs  hand_evaluator_3p.rs  lib.rs  rule.rs  shanten.rs  tests.rs  win_projection.rs  yaku_3p.rs
riichienv-core/src/observation/: encode.rs  mod.rs  python.rs
riichienv-core/src/observation_3p/: encode.rs  mod.rs  python.rs
riichienv-core/src/replay/: mjai_replay.rs  mjsoul_replay.rs  mod.rs
riichienv-core/src/state/: event_handler.rs  mod.rs
riichienv-core/src/state_3p/: event_handler.rs  legal_actions.rs  mod.rs  sanma.rs  wall.rs
riichienv-core/tests/: agari_correctness.rs
riichienv-ml/: pyproject.toml
riichienv-python/: Cargo.toml
riichienv-python/src/: env.rs  lib.rs
riichienv-ui/: README.md  biome.json  package-lock.json  package.json  player_custom_demo.html
riichienv-ui/demos/: replay_demo.ipynb
riichienv-ui/scripts/: gen_tiles.js
riichienv-ui/src/: base_viewer.ts  config.ts  constants.ts  controller.ts  game_state.ts  icons.ts  index.ts  live_controller.ts  live_viewer.ts  riichi_viewer.ts  styles_3d.ts  types.ts  viewer.ts  viewer_3d.ts
riichienv-wasm/: Cargo.toml
riichienv-wasm/src/: lib.rs
src/riichienv/: __init__.py  hand.py  (+1 more)
tests/: test_mjai_replay.py  test_shanten.py
(+33 files in other folders)
